chore: restore coverage