@@ -20,8 +20,6 @@
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <!-- disable javadoc linter for JDK8 to not fail on incomplete javadoc -->
     <additionalparam>-Xdoclint:none</additionalparam>
-    <!-- Skip instrumentalization by default -->
-    <jacoco.skip>true</jacoco.skip>
     <!-- holunda GPG key -->
     <gpg.keyname>86F8C6FC</gpg.keyname>
 
@@ -114,12 +112,6 @@
                 <goal>prepare-agent</goal>
               </goals>
             </execution>
-            <execution>
-              <id>pre-integration-test</id>
-              <goals>
-                <goal>prepare-agent-integration</goal>
-              </goals>
-            </execution>
           </executions>
         </plugin>
 
@@ -149,6 +141,21 @@
           <version>3.1.0</version>
           <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
+        </plugin>
+
+
+        <!-- Unit Tests -->
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.20.1</version>
+          <configuration>
+            <useSystemClassLoader>false</useSystemClassLoader>
+            <shutdown>kill</shutdown>
+            <runOrder>random</runOrder>
+            <!-- Sets the VM argument line used when unit tests are run. -->
+            <!-- prevent the annoying ForkedBooter process from stealing window focus on Mac OS -->
+            <argLine>-Djava.awt.headless=true ${argLine} -XX:+StartAttachListener -Xmx1024m -XX:MaxPermSize=256m</argLine>
           </configuration>
         </plugin>
 
